--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   </head>
 </head>
 <body>
-    <h1>Hi</h1>
-    <p>This is a another paragraph</p>
-    <h1>Hello this rebase topic</h1>
+  
+    <h1>Hello Rebase easy to understand</h1>
 </body>
 </html>
